--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
     "history": "^4.9.0",
+    "node-sass": "4.13.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.6",
